# aoostar-rs

./: CHANGELOG.md  README.md  flake.nix  rust_stable.nix
.github/workflows/: build.yml
crates/aster-ui/: Cargo.toml
crates/aster-ui/src/: binding.rs  config.rs  error.rs  layout.rs  lib.rs  renderer.rs  widget.rs
crates/aster-ui/src/style/: mod.rs  parser.rs
crates/aster-ui/tests/: bindings_progress.rs  dashboard_examples.rs  future_components.rs  rendering.rs
crates/asterctl/: Cargo.toml
crates/asterctl-lcd/src/: fake_serialport.rs
crates/asterctl/src/: dashboard.rs  lib.rs  main.rs  sensors.rs
crates/asterctl/tests/: dashboard_cli.rs
docs/: SUMMARY.md  widget-dashboard.md  widget-renderer-plan.md
examples/dashboards/advanced-components/: dashboard.css  dashboard.toml  values.txt
examples/dashboards/data/: storage-values.txt  system-values.txt
examples/dashboards/original-panel-recreation/: dashboard.css  dashboard.toml
examples/dashboards/storage-overview/: dashboard.css  dashboard.toml
examples/dashboards/system-overview/: dashboard.css  dashboard.toml
examples/dashboards/ultrawide-monitor/: dashboard.css  dashboard.toml  values.txt
