[package]
name = "aster-ui"
version = "0.1.0"
description = "Headless widget configuration and rendering for asterctl"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.21.0"
