[package]
name = "aster-ui"
version = "0.1.0"
description = "Headless widget configuration and rendering for asterctl"

rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosmic-text = { version = "0.17.0", default-features = false, features = ["std", "swash"] }
fontdb = { version = "0.23.0", default-features = false, features = ["std"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.219", features = ["derive"] }
taffy = { version = "0.10.1", default-features = false, features = [
  "std",
  "taffy_tree",
  "flexbox",
  "block_layout",
] }
thiserror = "2.0.16"
tiny-skia = { version = "0.12.0", default-features = false, features = ["std"] }
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.21.0"
